--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Max,Elsa,丸子小姐,maodq,noiary"/>
     <meta name="description" content="The web site of Max and Elsa">
     <meta name="author" content="Max,Elsa">
-    <title>Max and Elsa</title>
+    <title>Max & Elsa</title>
 
     <link href="/static/css/main.css" rel="stylesheet">
 </head>
