--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,9 @@
     <meta name="author" content="Max,Elsa">
     <title>Max & Elsa</title>
 
-    <link type="text/css" href="../static/css/main.css" rel="stylesheet"/>
-    <script src="../static/js/main.js"></script>
+    <!--<link type="text/css" href="../static/css/main.css" rel="stylesheet"/>-->
+    <link rel="stylesheet" href="/static/css/main.css"/>
+    <script src="/static/js/main.js"></script>
 </head>
 <body>
 <div>
